# Vision

./: .gitignore  5.lessons.md  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  CVDS_Jam_Video_Synthesizer.spec  CVDS_Qt_Platform.spec  OPENCODE_TUNING.md  README.md  README_LATENCY_TEST.md  README_RELEASE.md  cvds_detector_worker.spec  opencode.json  pt2openvino.py  pytest.ini  requirements.txt  test_model_speed.py  test_streaming_latency.py  test_vllm_latency.py
apps/CVDS_WCS_Multi_Camera_Monitor/: CMakeLists.txt  README.md
apps/CVDS_WCS_Multi_Camera_Monitor/configs/: cameras.json  regions.json  runtime.json
apps/CVDS_WCS_Multi_Camera_Monitor/include/: CameraConfig.h  DetectionResult.h  FlowEvent.h  InferenceManager.h  JamEvent.h  MainWindow.h  WcsMessage.h
apps/CVDS_WCS_Multi_Camera_Monitor/scripts/: gpu_infer_worker.py
apps/CVDS_WCS_Multi_Camera_Monitor/src/: CameraManager.cpp  CameraWorker.cpp  ConfigManager.cpp  DetectionWorker.cpp  FlowCounter.cpp  InferenceManager.cpp  JamDetector.cpp  Logger.cpp  MainWindow.cpp  RoiEditor.cpp  WcsClient.cpp  main.cpp
apps/CVDS_WCS_Multi_Camera_Monitor/src/inference/: LetterBox.cpp  LetterBox.h  OpenVinoDetector.cpp  OpenVinoDetector.h  YoloPostprocess.cpp  YoloPostprocess.h
apps/CVDS_WCS_Multi_Camera_Monitor/src/pipeline/: FlowCounter.cpp  FlowCounter.h  JamDetector.cpp  JamDetector.h  ResultWriter.cpp  ResultWriter.h  VideoPipeline.cpp  VideoPipeline.h
apps/CVDS_WCS_Multi_Camera_Monitor/src/tracking/: ByteTrack.cpp  ByteTrack.h  HungarianMatcher.cpp  HungarianMatcher.h  KalmanFilter.cpp  KalmanFilter.h  Track.cpp  Track.h
apps/CVDS_WCS_Multi_Camera_Monitor/src/utils/: FpsMeter.cpp  FpsMeter.h  Geometry.cpp  Geometry.h  JsonlWriter.h
apps/DWSVisionCountService/native/turbojpeg_decoder/: CMakeLists.txt
apps/DatasetAssistant/: CMakeLists.txt  README.md
apps/DatasetAssistant/docs/: 故障排查.md  用户使用说明.md  部署说明.md
apps/DatasetAssistant/packaging/: README_RELEASE.md  build_release.ps1  make_installer.iss
apps/DatasetAssistant/src/app/: AnnotationPanel.cpp  AnnotationPanel.h  BatchProcessPanel.cpp  BatchProcessPanel.h  DatasetSplitPanel.cpp  DatasetSplitPanel.h  DiagnosticsPanel.cpp  DiagnosticsPanel.h  InferencePanel.cpp  InferencePanel.h  MainWindow.cpp  MainWindow.h  ProjectPanel.cpp  ProjectPanel.h  TaskProgressPanel.cpp  TaskProgressPanel.h  main.cpp
apps/DatasetAssistant/src/core/: AnnotationIO.cpp  AnnotationIO.h  AnnotationTransform.cpp  AnnotationTransform.h  BatchProcessor.cpp  BatchProcessor.h  DatasetSplitter.cpp  DatasetSplitter.h  ImageProcessor.cpp  ImageProcessor.h  InferenceEngine.cpp  InferenceEngine.h  Logger.cpp  Logger.h  ProjectManager.cpp  ProjectManager.h  RuntimePaths.cpp  RuntimePaths.h  TaskScheduler.cpp  TaskScheduler.h  Tracker.cpp  Tracker.h
apps/DatasetAssistant/src/model/: Annotation.h  DatasetConfig.h  InferenceConfig.h  ProjectConfig.h  TransformConfig.h
apps/DatasetAssistant/tests/: test_annotation_io.cpp  test_annotation_transform.cpp  test_batch_processor.cpp  test_dataset_splitter.cpp  test_inference_engine.cpp  test_no_jam_feature.cpp  test_release_packaging.cpp  test_runtime_paths.cpp  visual_annotation_transform.cpp
apps/cvds_cpp_detector/: CMakeLists.txt  README.md  README_RELEASE.md  findings.md  progress.md  task_plan.md
apps/cvds_cpp_detector/assets/: arrow_down.xpm  arrow_up.xpm
apps/cvds_cpp_detector/configs/: bytetrack.yaml  cameras.wcs.example.json  regions.example.json  wcs.example.json
apps/cvds_cpp_detector/docs/: WCS_MULTI_CAMERA_SECOND_STAGE.md  WCS多路视觉监测开发说明.md  WCS多路视觉监测第二阶段.md  cvds_multi_roi_manual_test.md  部署说明.md
apps/cvds_cpp_detector/docs/plans/: 2026-06-10-multi-roi-dashboard.md
apps/cvds_cpp_detector/packaging/: README_RELEASE.md  build_release.ps1  make_installer.iss  requirements-worker.txt
apps/cvds_cpp_detector/scripts/: export_pt_to_onnx.py  inspect_model_metadata.py  pt_video_flow_monitor.py  worker_entry.py
apps/cvds_cpp_detector/src/: CameraTileWidget.cpp  CameraTileWidget.h  CameraWorker.cpp  CameraWorker.h  DetectionResult.h  Detector.cpp  Detector.h  MainWindow.cpp  MainWindow.h  RegionConfig.cpp  RegionConfig.h  RuntimePaths.cpp  RuntimePaths.h  WcsConfig.cpp  WcsConfig.h  WcsInferenceManager.cpp  WcsInferenceManager.h  WcsMessage.cpp  WcsMessage.h  WcsMonitorWindow.cpp  WcsMonitorWindow.h  WcsTcpClient.cpp  WcsTcpClient.h  app_icon.rc  main.cpp  resources.qrc  wcs_main.cpp
apps/cvds_cpp_detector/src/inference/: DetectorBackend.cpp  DetectorBackend.h  LetterBox.cpp  LetterBox.h  OpenVinoDetector.cpp  OpenVinoDetector.h  TensorRtDetector.cpp  TensorRtDetector.h  YoloPostprocess.cpp  YoloPostprocess.h
apps/cvds_cpp_detector/src/pipeline/: DashboardPayloadBuilder.cpp  DashboardPayloadBuilder.h  FlowCounter.cpp  FlowCounter.h  JamDetector.cpp  JamDetector.h  PipelineRuntimeManager.cpp  PipelineRuntimeManager.h  ResultWriter.cpp  ResultWriter.h  VideoPipeline.cpp  VideoPipeline.h  WcsPayloadPublisher.cpp  WcsPayloadPublisher.h
apps/cvds_cpp_detector/src/tracking/: ByteTrack.cpp  ByteTrack.h  HungarianMatcher.cpp  HungarianMatcher.h  KalmanFilter.cpp  KalmanFilter.h  Track.cpp  Track.h
apps/cvds_cpp_detector/src/utils/: Geometry.cpp  JsonlWriter.cpp  JsonlWriter.h
apps/dws_batch_model_validator/: README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  run_batch.py  run_gui.py  scripts_export_openvino_optional.py
apps/dws_batch_model_validator/configs/: default.yaml
apps/dws_batch_model_validator/docs/: 故障排查.md  用户使用说明.md  部署说明.md
apps/dws_batch_model_validator/packaging/: README_RELEASE.md  build_release.ps1  dws_batch_model_validator.spec  make_installer.iss
apps/dws_batch_model_validator/src/dws_batch_model_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/dws_batch_model_validator/src/dws_validator/: cli.py  config.py  decision.py  diagnostics.py  labels.py  logging_utils.py  metrics.py  predictor.py  runner.py  runtime_paths.py  (+2 more)
apps/dws_batch_model_validator/tests/: test_config.py  test_decision.py  test_gui_structure.py  test_labels.py  test_metrics.py  test_openvino_support.py
(+222 files in other folders)
